--- a/learn-docker/docker-compose.yml
+++ b/learn-docker/docker-compose.yml
@@ -1,11 +1,13 @@
 deewhy-webservice:
   build: .
-
+  depends_on:
+    - deewhy-cassandra
+  environment:
+    CASSANDRA_HOST=deewhy-cassandra
   ports:
     - "5000:5000"
   links:
     - deewhy-cassandra
-
 
 deewhy-cassandra:
   image: cassandra:3.11.7
